# Photo_processor

./: .gitignore  INSTALLATION_GUIDE.md  photo_processor
.devcontainer/: README_RU.md  devcontainer.json
.github/: INSTRUCTIONS_RU.md
.github/workflows/: ci.yml  run_photo_agent.yml
photo_agent/: .pre-commit-config.yaml  CHANGELOG.md  README.md  __init__.py  config.example.yaml  pyproject.toml  requirements.txt
photo_agent/src/: __init__.py  cli.py
photo_agent/src/ai/: __init__.py  brain.py
photo_agent/src/core/: __init__.py  config.py  geometry.py  processor.py
photo_agent/src/utils/: __init__.py  downloader.py  logger.py  namer.py
photo_agent/tests/: __init__.py  test_config.py  test_downloader.py  test_geometry.py  test_namer.py  test_processor.py
